[package]
name = "hello-world"
version = "0.1.0"
authors = ["Reinhard Knoll <reinhard@bluelab.com>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.5", features = ["binstart"] }


[build-dependencies]
embuild = "0.29"
anyhow = "1"
